--- a/v2/public/index.html
+++ b/v2/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> 
+   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,11 +23,11 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="full-height">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" class="full-height"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
